fixed gap in services 14-svg

--- a/14-svg/assets/css/style.scss
+++ b/14-svg/assets/css/style.scss
@@ -93,7 +93,7 @@ p {
 .services {
     display: flex;                             
     flex-wrap: wrap;                            
-    gap: 24px;                                  
+    gap: 30px;                                  
     list-style: none;                           
     padding: 0;
     margin: 0;
@@ -115,6 +115,7 @@ p {
   }
 
   .service-card {
+
     padding: 40px;
   }
   
